--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
     <div id="main">
         <div class="maininfo">
             <div class="upperrow">
-                <a href="http://www.google.com" class="town" href="http://www.google.com">Ноябрьск</a>
-                <a href="http://www.google.com" class="town">Златоуст</a>
-                <a href="http://www.google.com" class="town">3</a>
-                <a href="http://www.google.com" class="town">4</a>
-                <a href="http://www.google.com" class="town">5</a>
-                <a href="http://www.google.com" class="town">6</a>
-                <a href="http://www.google.com" class="town">7</a>
-                <a href="http://www.google.com" class="town">8</a>
+                <a href="https://unknown-explorer5483.github.io/project2/pages/num1/index.html" class="town" style="background: url(img/img1.jpg) no-repeat center;">Ноябрьск</a>
+                <a href="https://unknown-explorer5483.github.io/project2/pages/num2/index.html" class="town" style="background: url(img/img2.jpg) no-repeat center;">Златоуст</a>
+                <a href="https://unknown-explorer5483.github.io/project2/pages/num3/index.html" class="town" style="background: url(img/img3.jpg) no-repeat center;">Сургут</a>
+                <a href="https://unknown-explorer5483.github.io/project2/pages/num4/index.html" class="town" style="background: url(img/img4.jpg) no-repeat center;">Кисловодск</a>
+                <a href="https://unknown-explorer5483.github.io/project2/pages/num5/index.html" class="town" style="background: url(img/img5.jpg) no-repeat center;">Первоуральск</a>
+                <a href="https://unknown-explorer5483.github.io/project2/pages/num6/index.html" class="town" style="background: url(img/img6.jpg) no-repeat center;">Энгельс</a>
+                <a href="https://unknown-explorer5483.github.io/project2/pages/num7/index.html" class="town" style="background: url(img/img7.jpg) no-repeat center;">Сызрань</a>
+                <a href="https://unknown-explorer5483.github.io/project2/pages/num8/index.html" class="town" style="background: url(img/img8.jpg) no-repeat center;">Таганрог</a>
             </div>
             <div class="midrow">
                 <div class="rightcolumn">
-                    <a href="http://www.google.com" class="towncolumn smallupmargin">9</a>
-                    <a href="http://www.google.com" class="towncolumn">10</a>
-                    <a href="http://www.google.com" class="towncolumn">11</a>
-                    <a href="http://www.google.com" class="towncolumn smalldownmargin">12</a>
+                    <a href="https://unknown-explorer5483.github.io/project2/pages/num9/index.html" class="towncolumn smallupmargin" style="background: url(img/img9.jpg) no-repeat center;">Нижнекамск</a>
+                    <a href="https://unknown-explorer5483.github.io/project2/pages/num10/index.html" class="towncolumn" style="background: url(img/img10.jpg) no-repeat center;">Назрань</a>
+                    <a href="https://unknown-explorer5483.github.io/project2/pages/num11/index.html" class="towncolumn" style="background: url(img/img11.jpg) no-repeat center;">Каспийск</a>
+                    <a href="https://unknown-explorer5483.github.io/project2/pages/num12/index.html" class="towncolumn smalldownmargin" style="background: url(img/img12.jpg) no-repeat center; color: white;">Улан-Удэ</a>
                 </div>
                 <div class="info">
                     <div class="title">Заглавие сдесь</div>
@@ -34,21 +34,21 @@
                     </div>
                 </div>
                 <div class="leftcolumn">
-                    <a href="http://www.google.com" class="towncolumn smallupmargin">13</a>
-                    <a href="http://www.google.com" class="towncolumn">14</a>
-                    <a href="http://www.google.com" class="towncolumn">15</a>
-                    <a href="http://www.google.com" class="towncolumn smalldownmargin">16</a>
+                    <a href="https://unknown-explorer5483.github.io/project2/pages/num13/index.html" class="towncolumn smallupmargin" style="background: url(img/img13.jpg) no-repeat center;">Майкоп</a>
+                    <a href="https://unknown-explorer5483.github.io/project2/pages/num14/index.html" class="towncolumn" style="background: url(img/img14.jpg) no-repeat center;">Находка</a>
+                    <a href="https://unknown-explorer5483.github.io/project2/pages/num15/index.html" class="towncolumn" style="background: url(img/img15.jpg) no-repeat center;">Арзамас</a>
+                    <a href="https://unknown-explorer5483.github.io/project2/pages/num16/index.html" class="towncolumn smalldownmargin" style="background: url(img/img16.jpg) no-repeat center;">Серпухов</a>
                 </div>
             </div>
             <div class="downrow">
-                <a href="http://www.google.com" class="town">17</a>
-                <a href="http://www.google.com" class="town">18</a>
-                <a href="http://www.google.com" class="town">19</a>
-                <a href="http://www.google.com" class="town">20</a>
-                <a href="http://www.google.com" class="town">21</a>
-                <a href="http://www.google.com" class="town">22</a>
-                <a href="http://www.google.com" class="town">Старый Оскол</a>
-                <a href="http://www.google.com" class="town">24</a>
+                <a href="https://unknown-explorer5483.github.io/project2/pages/num17/index.html" class="town" style="background: url(img/img17.jpg) no-repeat center;">Армавир</a>
+                <a href="https://unknown-explorer5483.github.io/project2/pages/num18/index.html" class="town" style="background: url(img/img18.jpg) no-repeat center;">Железногорск</a>
+                <a href="https://unknown-explorer5483.github.io/project2/pages/num19/index.html" class="town" style="background: url(img/img19.jpg) no-repeat center;">Обнинск</a>
+                <a href="https://unknown-explorer5483.github.io/project2/pages/num20/index.html" class="town" style="background: url(img/img20.jpg) no-repeat center;">Муром</a>
+                <a href="https://unknown-explorer5483.github.io/project2/pages/num21/index.html" class="town" style="background: url(img/img21.jpg) no-repeat center;">Старый Оскол</a>
+                <a href="https://unknown-explorer5483.github.io/project2/pages/num22/index.html" class="town" style="background: url(img/img22.jpg) no-repeat center;">Бийск</a>
+                <a href="https://unknown-explorer5483.github.io/project2/pages/num23/index.html" class="town" style="background: url(img/img23.jpg) no-repeat center;">Орёл</a>
+                <a href="https://unknown-explorer5483.github.io/project2/pages/num24/index.html" class="town" style="background: url(img/img24.jpg) no-repeat center;">24</a>
             </div>
         </div>
         <div class="map">
@@ -58,6 +58,6 @@
 
     </div>
     </div>
-    <script src="main.js"></script>
+    <script src="map.js"></script>
 </body>
 </html>
