--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content=" initial-scale=1.0">
-    <title>Непопулярные направления туризма</title>
+    <title>Туризм в 2021</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -26,11 +26,11 @@
                     <a href="https://unknown-explorer5483.github.io/project2/pages/num12/index.html" class="towncolumn smalldownmargin" style="background: url(img/img12.jpg) no-repeat center; color: white;">Улан-Удэ</a>
                 </div>
                 <div class="info">
-                    <div class="title">Заглавие сдесь</div>
+                    <div class="title">Добро пожаловать!!!</div>
                     <div class="text">
-                        <p>. Товарищи! сложившаяся структура организации представляет собой интересный эксперимент проверки направлений прогрессивного развития. Равным образом постоянный количественный рост и сфера нашей активности играет важную роль в формировании системы обучения кадров, соответствует насущным потребностям.</p>
-                        <p>Равным образом консультация с широким активом требуют определения и уточнения модели развития. С другой стороны рамки и место обучения кадров способствует подготовки и реализации модели развития. Значимость этих проблем настолько очевидна, что консультация с широким активом играет важную роль в формировании новых предложений.</p>
-                        <p>Равным образом консультация с широким активом требуют определения и уточнения модели развития. Разнообразный и богатый опыт консультация с широким активом обеспечивает широкому кругу. Равным образом рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям. (этот текст для примера!!!!!)</p>
+                        <p>Этот сайт был создан для того чтобы рассказать о непопулярных направлениях, но интересных направлениях туризма в России.</p>
+                        <p>К сожалению, в наше время из-за эпидимиологической обстановки стало намного сложнее путешествовать за границей. Так-же путешествие в довольно больших и многонасёленных городах может быть опасным и не особо интересным. Поэтому мы хотим создать сайт о непопулярных направлениях туризма в России.</p>
+                        <p>Надеемся, что вам понравится данные туристические направления!</p>
                     </div>
                 </div>
                 <div class="leftcolumn">
@@ -48,15 +48,12 @@
                 <a href="https://unknown-explorer5483.github.io/project2/pages/num21/index.html" class="town" style="background: url(img/img21.jpg) no-repeat center;">Старый Оскол</a>
                 <a href="https://unknown-explorer5483.github.io/project2/pages/num22/index.html" class="town" style="background: url(img/img22.jpg) no-repeat center;">Бийск</a>
                 <a href="https://unknown-explorer5483.github.io/project2/pages/num23/index.html" class="town" style="background: url(img/img23.jpg) no-repeat center;">Орёл</a>
-                <a href="https://unknown-explorer5483.github.io/project2/pages/num24/index.html" class="town" style="background: url(img/img24.jpg) no-repeat center;">24</a>
+                <a href="https://unknown-explorer5483.github.io/project2/pages/num24/index.html" class="town" style="background: url(img/img24.jpg) no-repeat center;">Ессентуки</a>
             </div>
         </div>
         <div class="map">
             <canvas height="580" width="944" id="mapcanvas"></canvas>
         </div>
-        <div class="footer">
-
-    </div>
     </div>
     <script src="map.js"></script>
 </body>
