--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content=" initial-scale=1.0">
+    <link rel="shortcut icon" href="icon.png" type="image/x-icon">
     <title>Туризм в 2021</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -42,13 +43,13 @@
             </div>
             <div class="downrow">
                 <a href="https://unknown-explorer5483.github.io/project2/pages/num17/index.html" class="town" style="background: url(img/img17.jpg) no-repeat center;">Армавир</a>
-                <a href="https://unknown-explorer5483.github.io/project2/pages/num18/index.html" class="town" style="background: url(img/img18.jpg) no-repeat center;">Железногорск</a>
-                <a href="https://unknown-explorer5483.github.io/project2/pages/num19/index.html" class="town" style="background: url(img/img19.jpg) no-repeat center;">Обнинск</a>
-                <a href="https://unknown-explorer5483.github.io/project2/pages/num20/index.html" class="town" style="background: url(img/img20.jpg) no-repeat center;">Муром</a>
+                <a href="https://unknown-explorer5483.github.io/project2/pages/num18/index.html" class="town" style="background: url(img/img18.jpg) no-repeat center;">Норильск</a>
+                <a href="https://unknown-explorer5483.github.io/project2/pages/num19/index.html" class="town" style="background: url(img/img19.jpg) no-repeat center;">Череповец</a>
+                <a href="https://unknown-explorer5483.github.io/project2/pages/num20/index.html" class="town" style="background: url(img/img20.jpg) no-repeat center;">Усть-Илимск</a>
                 <a href="https://unknown-explorer5483.github.io/project2/pages/num21/index.html" class="town" style="background: url(img/img21.jpg) no-repeat center;">Старый Оскол</a>
                 <a href="https://unknown-explorer5483.github.io/project2/pages/num22/index.html" class="town" style="background: url(img/img22.jpg) no-repeat center;">Бийск</a>
                 <a href="https://unknown-explorer5483.github.io/project2/pages/num23/index.html" class="town" style="background: url(img/img23.jpg) no-repeat center;">Орёл</a>
-                <a href="https://unknown-explorer5483.github.io/project2/pages/num24/index.html" class="town" style="background: url(img/img24.jpg) no-repeat center;">Ессентуки</a>
+                <a href="https://unknown-explorer5483.github.io/project2/pages/num24/index.html" class="town" style="background: url(img/img24.jpg) no-repeat center;">Сыктывкар</a>
             </div>
         </div>
         <div class="map">
