--- a/index.html
+++ b/index.html
@@ -2,60 +2,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content=" initial-scale=1.0">
-    <link rel="shortcut icon" href="icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
     <title>Туризм в 2021</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylemain.css">
 </head>
 <body>
     <div id="main">
         <div class="maininfo">
             <div class="upperrow">
-                <a href="https://unknown-explorer5483.github.io/project2/pages/num1/index.html" class="town" style="background: url(img/img1.jpg) no-repeat center;">Ноябрьск</a>
-                <a href="https://unknown-explorer5483.github.io/project2/pages/num2/index.html" class="town" style="background: url(img/img2.jpg) no-repeat center;">Златоуст</a>
-                <a href="https://unknown-explorer5483.github.io/project2/pages/num3/index.html" class="town" style="background: url(img/img3.jpg) no-repeat center;">Сургут</a>
-                <a href="https://unknown-explorer5483.github.io/project2/pages/num4/index.html" class="town" style="background: url(img/img4.jpg) no-repeat center;">Кисловодск</a>
-                <a href="https://unknown-explorer5483.github.io/project2/pages/num5/index.html" class="town" style="background: url(img/img5.jpg) no-repeat center;">Первоуральск</a>
-                <a href="https://unknown-explorer5483.github.io/project2/pages/num6/index.html" class="town" style="background: url(img/img6.jpg) no-repeat center;">Энгельс</a>
-                <a href="https://unknown-explorer5483.github.io/project2/pages/num7/index.html" class="town" style="background: url(img/img7.jpg) no-repeat center;">Сызрань</a>
-                <a href="https://unknown-explorer5483.github.io/project2/pages/num8/index.html" class="town" style="background: url(img/img8.jpg) no-repeat center;">Таганрог</a>
+                <a href="pages/num1/index.html" class="town" style="background: url(img/img1.jpg) no-repeat center;">Ноябрьск</a>
+                <a href="pages/num1/index.html" class="town" style="background: url(img/img2.jpg) no-repeat center;">Златоуст</a>
+                <a href="pages/num1/index.html" class="town" style="background: url(img/img3.jpg) no-repeat center;">Сургут</a>
+                <a href="pages/num4/index.html" class="town" style="background: url(img/img4.jpg) no-repeat center; color: white;">Кисловодск</a>
+                <a href="pages/num5/index.html" class="town" style="background: url(img/img5.jpg) no-repeat center;">Первоуральск</a>
+                <a href="pages/num6/index.html" class="town" style="background: url(img/img6.jpg) no-repeat center;">Энгельс</a>
+                <a href="pages/num7/index.html" class="town" style="background: url(img/img7.jpg) no-repeat center;">Сызрань</a>
+                <a href="pages/num8/index.html" class="town" style="background: url(img/img8.jpg) no-repeat center; color: white;">Таганрог</a>
             </div>
             <div class="midrow">
                 <div class="rightcolumn">
-                    <a href="https://unknown-explorer5483.github.io/project2/pages/num9/index.html" class="towncolumn smallupmargin" style="background: url(img/img9.jpg) no-repeat center;">Нижнекамск</a>
-                    <a href="https://unknown-explorer5483.github.io/project2/pages/num10/index.html" class="towncolumn" style="background: url(img/img10.jpg) no-repeat center;">Назрань</a>
-                    <a href="https://unknown-explorer5483.github.io/project2/pages/num11/index.html" class="towncolumn" style="background: url(img/img11.jpg) no-repeat center;">Каспийск</a>
-                    <a href="https://unknown-explorer5483.github.io/project2/pages/num12/index.html" class="towncolumn smalldownmargin" style="background: url(img/img12.jpg) no-repeat center; color: white;">Улан-Удэ</a>
+                    <a href="pages/num9/index.html" class="towncolumn smallupmargin" style="background: url(img/img9.jpg) no-repeat center;">Нижнекамск</a>
+                    <a href="pages/num10/index.html" class="towncolumn" style="background: url(img/img10.jpg) no-repeat center;">Назрань</a>
+                    <a href="pages/num11/index.html" class="towncolumn" style="background: url(img/img11.jpg) no-repeat center;">Каспийск</a>
+                    <a href="pages/num12/index.html" class="towncolumn smalldownmargin" style="background: url(img/img12.jpg) no-repeat center; color: white;">Улан-Удэ</a>
                 </div>
                 <div class="info">
                     <div class="title">Добро пожаловать!!!</div>
                     <div class="text">
                         <p>Этот сайт был создан для того чтобы рассказать о непопулярных направлениях, но интересных направлениях туризма в России.</p>
-                        <p>К сожалению, в наше время из-за эпидимиологической обстановки стало намного сложнее путешествовать за границей. Так-же путешествие в довольно больших и многонасёленных городах может быть опасным и не особо интересным. Поэтому мы хотим создать сайт о непопулярных направлениях туризма в России.</p>
+                        <p>К сожалению, в наше время из-за эпидимиологической обстановки стало намного сложнее путешествовать за границей. Так-же путешествие в довольно больших и многонасёленных городах может быть опасным и не особо интересным.</p>
                         <p>Надеемся, что вам понравится данные туристические направления!</p>
                     </div>
                 </div>
                 <div class="leftcolumn">
-                    <a href="https://unknown-explorer5483.github.io/project2/pages/num13/index.html" class="towncolumn smallupmargin" style="background: url(img/img13.jpg) no-repeat center;">Майкоп</a>
-                    <a href="https://unknown-explorer5483.github.io/project2/pages/num14/index.html" class="towncolumn" style="background: url(img/img14.jpg) no-repeat center;">Находка</a>
-                    <a href="https://unknown-explorer5483.github.io/project2/pages/num15/index.html" class="towncolumn" style="background: url(img/img15.jpg) no-repeat center;">Арзамас</a>
-                    <a href="https://unknown-explorer5483.github.io/project2/pages/num16/index.html" class="towncolumn smalldownmargin" style="background: url(img/img16.jpg) no-repeat center;">Серпухов</a>
+                    <a href="pages/num13/index.html" class="towncolumn smallupmargin" style="background: url(img/img13.jpg) no-repeat center;">Майкоп</a>
+                    <a href="pages/num14/index.html" class="towncolumn" style="background: url(img/img14.jpg) no-repeat center;">Находка</a>
+                    <a href="pages/num15/index.html" class="towncolumn" style="background: url(img/img15.jpg) no-repeat center;">Арзамас</a>
+                    <a href="pages/num16/index.html" class="towncolumn smalldownmargin" style="background: url(img/img16.jpg) no-repeat center;">Серпухов</a>
                 </div>
             </div>
             <div class="downrow">
-                <a href="https://unknown-explorer5483.github.io/project2/pages/num17/index.html" class="town" style="background: url(img/img17.jpg) no-repeat center;">Армавир</a>
-                <a href="https://unknown-explorer5483.github.io/project2/pages/num18/index.html" class="town" style="background: url(img/img18.jpg) no-repeat center;">Норильск</a>
-                <a href="https://unknown-explorer5483.github.io/project2/pages/num19/index.html" class="town" style="background: url(img/img19.jpg) no-repeat center;">Череповец</a>
-                <a href="https://unknown-explorer5483.github.io/project2/pages/num20/index.html" class="town" style="background: url(img/img20.jpg) no-repeat center;">Усть-Илимск</a>
-                <a href="https://unknown-explorer5483.github.io/project2/pages/num21/index.html" class="town" style="background: url(img/img21.jpg) no-repeat center;">Старый Оскол</a>
-                <a href="https://unknown-explorer5483.github.io/project2/pages/num22/index.html" class="town" style="background: url(img/img22.jpg) no-repeat center;">Бийск</a>
-                <a href="https://unknown-explorer5483.github.io/project2/pages/num23/index.html" class="town" style="background: url(img/img23.jpg) no-repeat center;">Орёл</a>
-                <a href="https://unknown-explorer5483.github.io/project2/pages/num24/index.html" class="town" style="background: url(img/img24.jpg) no-repeat center;">Сыктывкар</a>
+                <a href="pages/num17/index.html" class="town" style="background: url(img/img17.jpg) no-repeat center;">Армавир</a>
+                <a href="pages/num18/index.html" class="town" style="background: url(img/img18.jpg) no-repeat center;">Норильск</a>
+                <a href="pages/num19/index.html" class="town" style="background: url(img/img19.jpg) no-repeat center;">Череповец</a>
+                <a href="pages/num20/index.html" class="town" style="background: url(img/img20.jpg) no-repeat center;">Усть-Илимск</a>
+                <a href="pages/num21/index.html" class="town" style="background: url(img/img21.jpg) no-repeat center;">Старый Оскол</a>
+                <a href="pages/num22/index.html" class="town" style="background: url(img/img22.jpg) no-repeat center;">Бийск</a>
+                <a href="pages/num23/index.html" class="town" style="background: url(img/img23.jpg) no-repeat center; color: white;">Орёл</a>
+                <a href="pages/num24/index.html" class="town" style="background: url(img/img24.jpg) no-repeat center;">Сыктывкар</a>
             </div>
         </div>
         <div class="map">
             <canvas height="580" width="944" id="mapcanvas"></canvas>
         </div>
     </div>
-    <script src="map.js"></script>
+    <script src="mapmain.js"></script>
 </body>
 </html>
