--- a/pages/num1/index.html
+++ b/pages/num1/index.html
@@ -2,12 +2,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content=" initial-scale=1.0">
-    <title>Непопулярные направления туризма</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Туризм в 2021</title>
+    <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
     <div id="main">
-        <a class="gotomain" href="http://www.google.com">На главную</a>
+        <a class="gotomain" href="../../index.html">На главную</a>
         <div class="map">
             <canvas height="580" width="944" id="mapcanvas"></canvas>
         </div>
@@ -27,6 +27,6 @@
         </div>
 
     </div>
-    <script src="map.js"></script>
+    <script src="../../map.js"></script>
 </body>
 </html>
