--- a/pages/num23/index.html
+++ b/pages/num23/index.html
@@ -2,13 +2,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content=" initial-scale=1.0">
-    <title>Непопулярные направления туризма</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Туризм в 2021</title>
+    <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
     <a href="#" title="Вернуться к началу" class="topbutton">^Наверх</a>
     <div id="main">
-        <a class="gotomain" href="https://unknown-explorer5483.github.io/project2/">На главную</a>
+        <a class="gotomain" href="../../index.html">На главную</a>
         <div class="map">
             <canvas height="580" width="944" id="mapcanvas"></canvas>
         </div>
@@ -53,6 +53,6 @@
         </div>
 
     </div>
-    <script src="map.js"></script>
+    <script src="../../map.js"></script>
 </body>
 </html>
