--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
                     <a href="pages/num12/index.html" class="towncolumn smalldownmargin" style="background: url(img/img12.jpg) no-repeat center; color: white;">Улан-Удэ</a>
                 </div>
                 <div class="info">
-                    <div class="title">Добро пожаловать!!!</div>
+                    <div class="title">Добро пожаловать на наш сайт!!!</div>
                     <div class="text">
-                        <p>Этот сайт был создан для того чтобы рассказать о непопулярных направлениях, но интересных направлениях туризма в России.</p>
-                        <p>К сожалению, в наше время из-за эпидимиологической обстановки стало намного сложнее путешествовать за границей. Так-же путешествие в довольно больших и многонасёленных городах может быть опасным и не особо интересным.</p>
+                        <p>
+                            Незнаете куда поехать? Хотите увидеть что-то новое? На этом сайте размещены различные достопримечательности, которые могут заинтересовать вас в почещении приведедённых городов. Также вы можете выбрать город на карте. В самом низу любой статьи находятся отели, население, климат и другие интересные факты об этих городах. 
+                        </p>
                         <p>Надеемся, что вам понравится данные туристические направления!</p>
                     </div>
                 </div>
@@ -48,7 +49,7 @@
                 <a href="pages/num20/index.html" class="town" style="background: url(img/img20.jpg) no-repeat center;">Усть-Илимск</a>
                 <a href="pages/num21/index.html" class="town" style="background: url(img/img21.jpg) no-repeat center;">Старый Оскол</a>
                 <a href="pages/num22/index.html" class="town" style="background: url(img/img22.jpg) no-repeat center;">Бийск</a>
-                <a href="pages/num23/index.html" class="town" style="background: url(img/img23.jpg) no-repeat center; color: white;">Орёл</a>
+                <a href="pages/num23/index.html" class="town" style="background: url(img/img23.jpg) no-repeat center;">Орёл</a>
                 <a href="pages/num24/index.html" class="town" style="background: url(img/img24.jpg) no-repeat center;">Сыктывкар</a>
             </div>
         </div>
