--- a/pages/num23/index.html
+++ b/pages/num23/index.html
@@ -14,7 +14,7 @@
             <canvas height="580" width="944" id="mapcanvas"></canvas>
         </div>
         <div class="info">
-            <div class="title"></div>
+            <div class="title">Орёл</div>
             <div class="subtitle">1.Гостиный Двор</div>
             <div class="text">
                 <p>До революции практически в каждом русском городе были свои торговые ряды. Не стал исключением и Орел. Местный Гостиный двор был образован еще в XVI веке. С тех пор это здание не раз страдало от разрушительных пожаров и неоднократно перестраивалось.</p>
