--- a/pages/num8/index.html
+++ b/pages/num8/index.html
@@ -14,7 +14,7 @@
             <canvas height="580" width="944" id="mapcanvas"></canvas>
         </div>
         <div class="info">
-            <div class="title"></div>
+            <div class="title">Таганрог</div>
             <div class="subtitle">1.Музей «Лавка Чеховых»</div>
             <div class="text">
                 <p>Этот дом арендовала на протяжении пяти лет семья будущего великого писателя А.П. Чехова. Сами Чеховы жили на втором этаже, а на первом размещалась их бакалейная лавка. Эти годы нашли отражение в творчестве писателя, по мотивам воспоминаний написано много рассказов. Экспозиция рассказывает о детских годах Антона Павловича, традициях и быте его семьи. Внутренний интерьер восстановлен, вниманию посетителей представлены личные вещи, документы, уникальные фотографии.</p>
