--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
         <div class="maininfo">
             <div class="upperrow">
                 <a href="pages/num1/index.html" class="town" style="background: url(img/img1.jpg) no-repeat center;">Ноябрьск</a>
-                <a href="pages/num1/index.html" class="town" style="background: url(img/img2.jpg) no-repeat center;">Златоуст</a>
+                <a href="pages/num1/index.html" class="town" style="background: url(img/img2.jpg) no-repeat center; color: white;">Златоуст</a>
                 <a href="pages/num1/index.html" class="town" style="background: url(img/img3.jpg) no-repeat center;">Сургут</a>
                 <a href="pages/num4/index.html" class="town" style="background: url(img/img4.jpg) no-repeat center; color: white;">Кисловодск</a>
                 <a href="pages/num5/index.html" class="town" style="background: url(img/img5.jpg) no-repeat center;">Первоуральск</a>
                 <a href="pages/num6/index.html" class="town" style="background: url(img/img6.jpg) no-repeat center;">Энгельс</a>
-                <a href="pages/num7/index.html" class="town" style="background: url(img/img7.jpg) no-repeat center;">Сызрань</a>
+                <a href="pages/num7/index.html" class="town" style="background: url(img/img7.jpg) no-repeat center; color: white;">Сызрань</a>
                 <a href="pages/num8/index.html" class="town" style="background: url(img/img8.jpg) no-repeat center; color: white;">Таганрог</a>
             </div>
             <div class="midrow">
                 <div class="rightcolumn">
-                    <a href="pages/num9/index.html" class="towncolumn smallupmargin" style="background: url(img/img9.jpg) no-repeat center;">Нижнекамск</a>
-                    <a href="pages/num10/index.html" class="towncolumn" style="background: url(img/img10.jpg) no-repeat center;">Назрань</a>
+                    <a href="pages/num9/index.html" class="towncolumn smallupmargin" style="background: url(img/img9.jpg) no-repeat center; color: white;">Нижнекамск</a>
+                    <a href="pages/num10/index.html" class="towncolumn" style="background: url(img/img10.jpg) no-repeat center; color: white;">Назрань</a>
                     <a href="pages/num11/index.html" class="towncolumn" style="background: url(img/img11.jpg) no-repeat center;">Каспийск</a>
                     <a href="pages/num12/index.html" class="towncolumn smalldownmargin" style="background: url(img/img12.jpg) no-repeat center; color: white;">Улан-Удэ</a>
                 </div>
@@ -39,7 +39,7 @@
                     <a href="pages/num13/index.html" class="towncolumn smallupmargin" style="background: url(img/img13.jpg) no-repeat center;">Майкоп</a>
                     <a href="pages/num14/index.html" class="towncolumn" style="background: url(img/img14.jpg) no-repeat center;">Находка</a>
                     <a href="pages/num15/index.html" class="towncolumn" style="background: url(img/img15.jpg) no-repeat center;">Арзамас</a>
-                    <a href="pages/num16/index.html" class="towncolumn smalldownmargin" style="background: url(img/img16.jpg) no-repeat center;">Серпухов</a>
+                    <a href="pages/num16/index.html" class="towncolumn smalldownmargin" style="background: url(img/img16.jpg) no-repeat center; color: white;">Серпухов</a>
                 </div>
             </div>
             <div class="downrow">
@@ -50,7 +50,7 @@
                 <a href="pages/num21/index.html" class="town" style="background: url(img/img21.jpg) no-repeat center;">Старый Оскол</a>
                 <a href="pages/num22/index.html" class="town" style="background: url(img/img22.jpg) no-repeat center;">Бийск</a>
                 <a href="pages/num23/index.html" class="town" style="background: url(img/img23.jpg) no-repeat center;">Орёл</a>
-                <a href="pages/num24/index.html" class="town" style="background: url(img/img24.jpg) no-repeat center;">Сыктывкар</a>
+                <a href="pages/num24/index.html" class="town" style="background: url(img/img24.jpg) no-repeat center; color: white;">Сыктывкар</a>
             </div>
         </div>
         <div class="map">
