--- a/pages/num0/index.html
+++ b/pages/num0/index.html
@@ -50,10 +50,24 @@
                 <p></p>
             </div>
             <img src="img/img5.jpg">
+        </div>
+            <div class="statsandsymbols">
+                <div class="stats" style="width: 300px;">
+                    <div class="subtitle">НЕмного информации:</div>
+                    <p>Население:*.</p>
+                    <p>Средняя стоимость отелей: от ** до **.</p>
+                    <p>Среднегодовая температура воздуха: * °C.</p>
+                    <p>Часовой зона: МСК*.</p>
+                    <p>Расстояние от Москвы:* км.</p>
+                    <p>Основан в * году.</p>
+                </div>
+                <div class="symbols">
+                    <img src="img/flag.png" class="symbol1">
+                    <img src="img/emblem.png" class="symbol2">
+                </div>
             </div>
         </div>
-
     </div>
-    <script src="../../map.js"></script>
+<script src="../../map.js"></script>
 </body>
 </html>
