--- a/pages/num23/index.html
+++ b/pages/num23/index.html
@@ -51,8 +51,21 @@
             </div>
             <img src="img/img5.jpg">
             </div>
-        </div>
-
+            <div class="statsandsymbols">
+                <div class="stats" style="width: 300px;">
+                    <div class="subtitle">НЕмного информации:</div>
+                    <p>Население:308 838.</p>
+                    <p>Средняя стоимость отелей: от 1000 до 3500руб.</p>
+                    <p>Среднегодовая температура воздуха: +5,6 °C.</p>
+                    <p>Часовой зона: МСК+0.</p>
+                    <p>Расстояние от Москвы:325 км.</p>
+                    <p>Основан в 1566 году.</p>
+                </div>
+                <div class="symbols">
+                    <img src="img/flag.png" class="symbol1">
+                    <img src="img/emblem.png" class="symbol2">
+                </div>
+            </div>
     </div>
     <script src="../../map.js"></script>
 </body>
