--- a/pages/num4/index.html
+++ b/pages/num4/index.html
@@ -48,8 +48,21 @@
             </div>
             <img src="img/img5.jpg">
             </div>
-        </div>
-
+            <div class="statsandsymbols">
+                <div class="stats" style="width: 300px;">
+                    <div class="subtitle">НЕмного информации:</div>
+                    <p>Население:128 779.</p>
+                    <p>Средняя стоимость отелей: от 2000 до 5000руб.</p>
+                    <p>Среднегодовая температура воздуха — 6,5 °C</p>
+                    <p>Часовой зона: МСК+0.</p>
+                    <p>Расстояние от Москвы:1366 км.</p>
+                    <p>Основан в 1803 год.</p>                    
+                </div>
+                <div class="symbols">
+                    <img src="img/flag.png" class="symbol1">
+                    <img src="img/emblem.png" class="symbol2">
+                </div>
+            </div>
     </div>
     <script src="../../map.js"></script>
 </body>
