--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <div class="maininfo">
             <div class="upperrow">
                 <a href="pages/num1/index.html" class="town" style="background: url(img/img1.jpg) no-repeat center;">Ноябрьск</a>
-                <a href="pages/num1/index.html" class="town" style="background: url(img/img2.jpg) no-repeat center; color: white;">Златоуст</a>
-                <a href="pages/num1/index.html" class="town" style="background: url(img/img3.jpg) no-repeat center;">Сургут</a>
+                <a href="pages/num2/index.html" class="town" style="background: url(img/img2.jpg) no-repeat center; color: white;">Златоуст</a>
+                <a href="pages/num3/index.html" class="town" style="background: url(img/img3.jpg) no-repeat center;">Сургут</a>
                 <a href="pages/num4/index.html" class="town" style="background: url(img/img4.jpg) no-repeat center; color: white;">Кисловодск</a>
                 <a href="pages/num5/index.html" class="town" style="background: url(img/img5.jpg) no-repeat center;">Первоуральск</a>
                 <a href="pages/num6/index.html" class="town" style="background: url(img/img6.jpg) no-repeat center;">Энгельс</a>
@@ -49,7 +49,7 @@
                 <a href="pages/num20/index.html" class="town" style="background: url(img/img20.jpg) no-repeat center;">Усть-Илимск</a>
                 <a href="pages/num21/index.html" class="town" style="background: url(img/img21.jpg) no-repeat center;">Старый Оскол</a>
                 <a href="pages/num22/index.html" class="town" style="background: url(img/img22.jpg) no-repeat center;">Бийск</a>
-                <a href="pages/num23/index.html" class="town" style="background: url(img/img23.jpg) no-repeat center;">Орёл</a>
+                <a href="pages/num23/index.html" class="town" style="background: url(img/img23.jpg) no-repeat center; color: white;">Орёл</a>
                 <a href="pages/num24/index.html" class="town" style="background: url(img/img24.jpg) no-repeat center; color: white;">Сыктывкар</a>
             </div>
         </div>
