--- a/pages/num10/index.html
+++ b/pages/num10/index.html
@@ -52,7 +52,21 @@
             </div>
             <img src="img/img5.jpg">
             </div>
-        </div>
+            <div class="statsandsymbols">
+                <div class="stats" style="width: 300px;">
+                    <div class="subtitle">НЕмного информации:</div>
+                    <p>Население:122 261.</p>
+                    <p>Средняя стоимость отелей: от 2000 до 3000руб.</p>
+                    <p>Среднегодовая температура воздуха +9,5 °C.</p>
+                    <p>Часовой зона: МСК+0.</p>
+                    <p>Расстояние от Москвы:1483 км.</p>
+                    <p>Основан в 1781 году.</p>
+                </div>
+                <div class="symbols">
+                    <img src="img/flag.png" class="symbol1">
+                    <img src="img/emblem.png" class="symbol2">
+                </div>
+            </div>
 
     </div>
     <script src="../../map.js"></script>
