--- a/pages/num16/index.html
+++ b/pages/num16/index.html
@@ -51,8 +51,22 @@
             </div>
             <img src="img/img5.jpg">
             </div>
-        </div>
-
+            <div class="statsandsymbols">
+                <div class="stats" style="width: 300px;">
+                    <div class="subtitle">НЕмного информации:</div>
+                    <p>Население:126 273.</p>
+                    <p>Средняя стоимость отелей: от 1500 до 4000руб.</p>
+                    <p>Среднегодовая температура воздуха: +5 °C.</p>
+                    <p>Часовой зона: МСК+0.</p>
+                    <p>Расстояние от Москвы:94 км.</p>
+                    <p>Основан в 1339 году.</p>
+                </div>
+                <div class="symbols">
+                    <img src="img/flag.png" class="symbol1">
+                    <img src="img/emblem.png" class="symbol2">
+                </div>
+            </div>
+        
     </div>
     <script src="../../map.js"></script>
 </body>
