--- a/pages/num2/index.html
+++ b/pages/num2/index.html
@@ -52,8 +52,22 @@
             </div>
             <img src="img/img5.jpg">
             </div>
+            <div class="statsandsymbols">
+                <div class="stats" style="width: 300px;">
+                    <div class="subtitle">НЕмного информации:</div>
+                    <p>Население:163 919.</p>
+                    <p>Средняя стоимость отелей: от 1000 до 4000руб.</p>
+                    <p>Среднегодовая температура воздуха — 1,9 °C.</p>
+                    <p>Часовой зона: МСК+2.</p>
+                    <p>Расстояние от Москвы:1750 км.</p>
+                    <p>Основан в 1754 году.</p>
+                </div>
+                <div class="symbols">
+                    <img src="img/flag.png" class="symbol1">
+                    <img src="img/emblem.png" class="symbol2">
+                </div>
+            </div>
         </div>
-
     </div>
     <script src="../../map.js"></script>
 </body>
