--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <a href="pages/num20/index.html" class="town" style="background: url(img/img20.jpg) no-repeat center;">Усть-Илимск</a>
                 <a href="pages/num21/index.html" class="town" style="background: url(img/img21.jpg) no-repeat center;">Старый Оскол</a>
                 <a href="pages/num22/index.html" class="town" style="background: url(img/img22.jpg) no-repeat center;">Бийск</a>
-                <a href="pages/num23/index.html" class="town" style="background: url(img/img23.jpg) no-repeat center; color: white;">Орёл</a>
+                <a href="pages/num23/index.html" class="town" style="background: url(img/img23.jpg) no-repeat center;">Орёл</a>
                 <a href="pages/num24/index.html" class="town" style="background: url(img/img24.jpg) no-repeat center; color: white;">Сыктывкар</a>
             </div>
         </div>
