--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div class="title">Добро пожаловать на наш сайт!!!</div>
                     <div class="text">
                         <p>
-                            Незнаете куда поехать? Хотите увидеть что-то новое? На этом сайте размещены различные достопримечательности, которые могут заинтересовать вас в почещении приведедённых городов. Также вы можете выбрать город на карте. В самом низу любой статьи находятся отели, население, климат и другие интересные факты об этих городах. 
+                            Не знаете куда поехать? Хотите увидеть что-то новое? На нашем сайте размещены различные достопримечательности, которые могут заинтересовать вас в посещении приведедённых городов. Также вы можете выбрать город на карте, узнать о численности населения отелях, достопримечательностях, населении, климате и другие интересные фактах об этих городах. 
                         </p>
                         <p>Надеемся, что вам понравится данные туристические направления!</p>
                     </div>
