--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     <div id="main">
         <div class="maininfo">
             <div class="upperrow">
-                <a href="pages/num1/index.html" class="town" style="background: url(img/img1.jpg) no-repeat center;">Ноябрьск</a>
+                <a href="pages/num1/index.html" class="town smallimage" style="background: url(img/img1.jpg) no-repeat center;">Ноябрьск</a>
                 <a href="pages/num2/index.html" class="town" style="background: url(img/img2.jpg) no-repeat center; color: white;">Златоуст</a>
-                <a href="pages/num3/index.html" class="town" style="background: url(img/img3.jpg) no-repeat center;">Сургут</a>
+                <a href="pages/num3/index.html" class="town" style="background: url(img/img3.jpg) no-repeat center;color: white;">Сургут</a>
                 <a href="pages/num4/index.html" class="town" style="background: url(img/img4.jpg) no-repeat center; color: white;">Кисловодск</a>
-                <a href="pages/num5/index.html" class="town" style="background: url(img/img5.jpg) no-repeat center;">Первоуральск</a>
+                <a href="pages/num5/index.html" class="town smallimage" style="background: url(img/img5.jpg) no-repeat center;color: white;">Первоуральск</a>
                 <a href="pages/num6/index.html" class="town" style="background: url(img/img6.jpg) no-repeat center;">Энгельс</a>
                 <a href="pages/num7/index.html" class="town" style="background: url(img/img7.jpg) no-repeat center; color: white;">Сызрань</a>
                 <a href="pages/num8/index.html" class="town" style="background: url(img/img8.jpg) no-repeat center; color: white;">Таганрог</a>
             </div>
             <div class="midrow">
                 <div class="rightcolumn">
-                    <a href="pages/num9/index.html" class="towncolumn smallupmargin" style="background: url(img/img9.jpg) no-repeat center; color: white;">Нижнекамск</a>
+                    <a href="pages/num9/index.html" class="towncolumn smallupmargin" style="background: url(img/img9.jpg) no-repeat center; color:white;">Нижнекамск</a>
                     <a href="pages/num10/index.html" class="towncolumn" style="background: url(img/img10.jpg) no-repeat center; color: white;">Назрань</a>
                     <a href="pages/num11/index.html" class="towncolumn" style="background: url(img/img11.jpg) no-repeat center;">Каспийск</a>
                     <a href="pages/num12/index.html" class="towncolumn smalldownmargin" style="background: url(img/img12.jpg) no-repeat center; color: white;">Улан-Удэ</a>
