--- a/pages/num23/index.html
+++ b/pages/num23/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content=" initial-scale=1.0">
     <link rel="shortcut icon" href="../../img/icon.png" type="image/x-icon">
-    <title>Туризм в 2021</title>
+    <title>Туризм в России</title>
     <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
