--- a/pages/num1/index.html
+++ b/pages/num1/index.html
@@ -14,7 +14,7 @@
             <canvas height="580" width="944" id="mapcanvas"></canvas>
         </div>
         <div class="info">
-            <div class="title"></div>
+            <div class="title">Ноябрьск</div>
             <div class="subtitle">1.Озеро Светлое            </div>
             <div class="text">
                 <p>Озеро Светлое – большое красиво озеро, которое является одним из природным памятников Ноябрьска. Оно расположено неподалеку от города – в его северном пригороде. Такое название озеро получило, поскольку его вода, даже в самые хмурые дни остается чистой, светлой и сверкающей.                </p>
