--- a/pages/num5/index.html
+++ b/pages/num5/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content=" initial-scale=1.0">
     <link rel="shortcut icon" href="../../img/icon.png" type="image/x-icon">
-    <title>Туризм в России</title>
+    <title>Туризм в 2021</title>
     <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
             <canvas height="580" width="944" id="mapcanvas"></canvas>
         </div>
         <div class="info">
-            <div class="title"></div>
+            <div class="title">Первоуральск</div>
             <div class="subtitle">1.Инновационный культурный центр</div>
             <div class="text">
                 <p>Государственное автономное учреждение культуры Свердловской области Инновационный культурный центр– первый федеральный проект, реализованный в рамках исполнения майских Указов Президента Российской Федерации в 2016 году. Инновационный культурный центр стал визитной карточкой не только Первоуральска, но и всего Уральского региона! Это комплекс инфраструктурно подготовленных площадок. Широкое внедрение новых технологических решений позволяет центру обеспечивать качественное развитие различных областей деятельности: библиотечной, музейной, выставочной, концертной, театральной и кинематографической, а также разнообразных образовательных проектов. Необычное круглое здание инновационного культурного центра, которое местные жители называют «шайбой», построено по проекту архитектурного бюро Bernaskoni и располагается на территории Старотрубного завода.                </p>
