--- a/pages/num7/index.html
+++ b/pages/num7/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content=" initial-scale=1.0">
     <link rel="shortcut icon" href="../../img/icon.png" type="image/x-icon">
-    <title>Туризм в России</title>
+    <title>Туризм в 2021</title>
     <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
             <canvas height="580" width="944" id="mapcanvas"></canvas>
         </div>
         <div class="info">
-            <div class="title"></div>
+            <div class="title">Сызрань</div>
             <div class="subtitle">1.Сызранский кремль</div>
             <div class="text">
                 <p>Строение, которое положило начало городу, сегодня практически не сохранилось. От Кремля, построенного Григорием Козловским в междуречье Сызранки и Крымзы, осталась лишь одна Спасская башня, ранее бывшая воротной. Полагают, что она сохранилась только потому, что была каменной – в отличие от остальных. </p>
