--- a/pages/num9/index.html
+++ b/pages/num9/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content=" initial-scale=1.0">
     <link rel="shortcut icon" href="../../img/icon.png" type="image/x-icon">
-    <title>Туризм в России</title>
+    <title>Туризм в 2021</title>
     <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
             <canvas height="580" width="944" id="mapcanvas"></canvas>
         </div>
         <div class="info">
-            <div class="title"></div>
+            <div class="title">Нижнекамск</div>
             <div class="subtitle">1.Музей велосипедов</div>
             <div class="text">
                 <p>Музей велосипедов на территории детского автогородка Veliki, часть созданного в Нижнекамске образовательного центра велокультуры, утверждает значимость человеко-ориентированной мобильности в современном духе.</p>
