--- a/pages/num10/index.html
+++ b/pages/num10/index.html
@@ -14,7 +14,7 @@
             <canvas height="580" width="944" id="mapcanvas"></canvas>
         </div>
         <div class="info">
-            <div class="title"></div>
+            <div class="title">Назрань</div>
             <div class="subtitle">1.Памятник Поезд времен депортации ингушей 1944 года</div>
             <div class="text">
                 <p>Поезд времен депортации ингушей 1944 года установлен на территории Мемориала памяти и славы был установлен экспонат поезда времен депортации ингушей в 1944 в память об этом геноциде. Экспонат представляет собой реальных размеров паровоз и вагон Теплушка, в которых осуществлялась насильственная перевозка депортируемых народов.</p>
