--- a/pages/num11/index.html
+++ b/pages/num11/index.html
@@ -14,7 +14,7 @@
             <canvas height="580" width="944" id="mapcanvas"></canvas>
         </div>
         <div class="info">
-            <div class="title"></div>
+            <div class="title">Каспийск</div>
             <div class="subtitle">1.Историко-краеведческий музей</div>
             <div class="text">
                 <p>Это первый музей в истории республики Дагестан. Ранее существовал и как музей революции, и как музей Сталина. Здесь присутствуют экспозиции и выставки об истории города и республики.
