--- a/pages/num13/index.html
+++ b/pages/num13/index.html
@@ -14,7 +14,7 @@
             <canvas height="580" width="944" id="mapcanvas"></canvas>
         </div>
         <div class="info">
-            <div class="title"></div>
+            <div class="title">Майкоп</div>
             <div class="subtitle">1.Площадь Ленина</div>
             <div class="text">
                 <p>Спроектирована в 1969 году. Тогда же происходило строительство. В 1973 году установлен памятник Ленину работы М. Манизера. Поскольку монумент стоит на высоком пьедестале, его хорошо видно из любой точки площади. Уже в наши дни здесь появился светомузыкальный фонтан, что несколько осовременило внешний вид округи. На площади до сих пор проводятся большие городские мероприятия.</p>
