--- a/pages/num14/index.html
+++ b/pages/num14/index.html
@@ -14,7 +14,7 @@
             <canvas height="580" width="944" id="mapcanvas"></canvas>
         </div>
         <div class="info">
-            <div class="title"></div>
+            <div class="title">Находка</div>
             <div class="subtitle">1.Остров Лисий</div>
             <div class="text">
                 <p>Ныне необитаемый остров Охотского моря с высокими обрывистыми берегами отделяет от материка расстояние чуть более полукилометра. Он имеет непростую и трагичную историю. Здесь размещался женский трудовой лагерь в составе ГУЛАГа, работали узницы на рыбообрабатывающем предприятии.</p>
