--- a/pages/num15/index.html
+++ b/pages/num15/index.html
@@ -14,7 +14,7 @@
             <canvas height="580" width="944" id="mapcanvas"></canvas>
         </div>
         <div class="info">
-            <div class="title"></div>
+            <div class="title">Арзамас</div>
             <div class="subtitle">1.Церковь Благовещения Пресвятой Богородицы</div>
             <div class="text">
                 <p>Прекрасный храм, расположенный в центре города, выполнен из дорого кирпича в стиле барокко. Основной цвет святыни – белый, постройку сложно не заметить издалека. Строительство проходило в период 1774-1784 годов. Славится церковь крупной колокольней, которая располагается возле основного здания. В 1929 году собор закрыли по настоянию властей. Лишь в 2003 году началось масштабное восстановление святыни. Городские средства были направлены на реставрацию сооружения внутри и снаружи. Удалось воссоздать первоначальный величественный вид собора;</p>
