--- a/pages/num16/index.html
+++ b/pages/num16/index.html
@@ -14,7 +14,7 @@
             <canvas height="580" width="944" id="mapcanvas"></canvas>
         </div>
         <div class="info">
-            <div class="title"></div>
+            <div class="title">Серпухов</div>
             <div class="subtitle">1.Серпуховской историко-художественный музей</div>
             <div class="text">
                 <p>Любителям истории и искусства можно посетить Серпуховской историко-художественный музей (на англ. Serpukhov History and Art Museum). Он был открыт в 1920 году на основе богатой коллекции купцов Мараевых, которые занимались текстильной промышленностью.</p>
