--- a/pages/num21/index.html
+++ b/pages/num21/index.html
@@ -14,7 +14,7 @@
             <canvas height="580" width="944" id="mapcanvas"></canvas>
         </div>
         <div class="info">
-            <div class="title"></div>
+            <div class="title">Старый Оскол</div>
             <div class="subtitle">1.Дендропарк</div>
             <div class="text">
                 <p>В дендропарке вы попадёте в настоящий зелёный рай. Здесь произрастает более 70 видов различных деревьев и кустарников, в их числе – экзотические для данной местности, растёт более 60 видов цветов и трав. По его территории дорожки сделаны из спилов деревьев. Для проведения школьных уроков на природе создан открытый класс. Проложена экологическая тропа «Восьмое чудо света» протяжённостью 800 м, на которой восемь тематических стоянок.                </p>
