--- a/pages/num24/index.html
+++ b/pages/num24/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content=" initial-scale=1.0">
     <link rel="shortcut icon" href="../../img/icon.png" type="image/x-icon">
-    <title>Туризм в России</title>
+    <title>Туризм в 2021</title>
     <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
             <canvas height="580" width="944" id="mapcanvas"></canvas>
         </div>
         <div class="info">
-            <div class="title"></div>
+            <div class="title">Сыктывкар</div>
             <div class="subtitle">1.Государственный театр оперы и балета Республики Коми</div>
             <div class="text">
                 <p>Большим интересом среди жителей и гостей города пользуется Государственный театр оперы и балета Республики Коми. Он был открыт в 1958 году, для своего первого представления был выбран спектакль П. И. Чайковского «Евгений Онегин». В первые годы была сформирована труппа из талантливых актеров, которые благодаря своему творческому подходу постепенно превратилась в одну из самых профессиональных.</p>
