--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
                     </div>
                 </div>
                 <div class="leftcolumn">
-                    <a href="pages/num13/index.html" class="towncolumn smallupmargin" style="background: url(img/img13.jpg) no-repeat center; color: white;">Майкоп</a>
+                    <a href="pages/num13/index.html" class="towncolumn smallupmargin" style="background: url(img/img13.jpg) no-repeat center;">Майкоп</a>
                     <a href="pages/num14/index.html" class="towncolumn" style="background: url(img/img14.jpg) no-repeat center;">Находка</a>
-                    <a href="pages/num15/index.html" class="towncolumn" style="background: url(img/img15.jpg) no-repeat center; color: white;">Арзамас</a>
+                    <a href="pages/num15/index.html" class="towncolumn" style="background: url(img/img15.jpg) no-repeat center;">Арзамас</a>
                     <a href="pages/num16/index.html" class="towncolumn smalldownmargin" style="background: url(img/img16.jpg) no-repeat center; color: white;">Серпухов</a>
                 </div>
             </div>
             <div class="downrow">
-                <a href="pages/num17/index.html" class="town" style="background: url(img/img17.jpg) no-repeat center; color: white;">Армавир</a>
+                <a href="pages/num17/index.html" class="town" style="background: url(img/img17.jpg) no-repeat center;">Армавир</a>
                 <a href="pages/num18/index.html" class="town" style="background: url(img/img18.jpg) no-repeat center;">Норильск</a>
-                <a href="pages/num19/index.html" class="town" style="background: url(img/img19.jpg) no-repeat center; color: white;">Череповец</a>
+                <a href="pages/num19/index.html" class="town" style="background: url(img/img19.jpg) no-repeat center;">Череповец</a>
                 <a href="pages/num20/index.html" class="town" style="background: url(img/img20.jpg) no-repeat center;">Усть-Илимск</a>
                 <a href="pages/num21/index.html" class="town" style="background: url(img/img21.jpg) no-repeat center;">Старый Оскол</a>
-                <a href="pages/num22/index.html" class="town" style="background: url(img/img22.jpg) no-repeat center; color: white;">Бийск</a>
+                <a href="pages/num22/index.html" class="town" style="background: url(img/img22.jpg) no-repeat center;">Бийск</a>
                 <a href="pages/num23/index.html" class="town" style="background: url(img/img23.jpg) no-repeat center;">Орёл</a>
                 <a href="pages/num24/index.html" class="town" style="background: url(img/img24.jpg) no-repeat center; color: white;">Сыктывкар</a>
             </div>
@@ -56,7 +56,11 @@
         <div class="map">
             <canvas height="580" width="944" id="mapcanvas"></canvas>
         </div>
+        <div class="footer">
+        Отзывы: reviewstourism@mail.ru
+        </div>
     </div>
+    
     <script src="mapmain.js"></script>
 </body>
 </html>
