--- a/pages/num24/index.html
+++ b/pages/num24/index.html
@@ -53,7 +53,7 @@
             </div>
             <div class="statsandsymbols">
                 <div class="stats" style="width: 300px;">
-                    <div class="subtitle">НЕмного информации:</div>
+                    <div class="subtitle">Немного информации:</div>
                     <p>Население:244 403.</p>
                     <p>Средняя стоимость отелей: от 2000 до 4000руб.</p>
                     <p>Среднегодовая температура — +1,3 °C.</p>
