--- a/pages/num1/index.html
+++ b/pages/num1/index.html
@@ -55,7 +55,7 @@
             </div>
             <div class="statsandsymbols">
                 <div class="stats" style="width: 300px;">
-                    <div class="subtitle">НEмного информации:</div>
+                    <div class="subtitle">Немного информации:</div>
                     <p>Население:106 911.</p>
                     <p>Средняя стоимость отелей: от 3000 руб до 6000 руб.</p>
                     <p>Среднегодовая температура воздуха: −3°C.</p>
