--- a/pages/num23/index.html
+++ b/pages/num23/index.html
@@ -53,7 +53,7 @@
             </div>
             <div class="statsandsymbols">
                 <div class="stats" style="width: 300px;">
-                    <div class="subtitle">НЕмного информации:</div>
+                    <div class="subtitle">Немного информации:</div>
                     <p>Население:308 838.</p>
                     <p>Средняя стоимость отелей: от 1000 до 3500руб.</p>
                     <p>Среднегодовая температура воздуха: +5,6 °C.</p>
