--- a/pages/num2/index.html
+++ b/pages/num2/index.html
@@ -54,7 +54,7 @@
             </div>
             <div class="statsandsymbols">
                 <div class="stats" style="width: 300px;">
-                    <div class="subtitle">НЕмного информации:</div>
+                    <div class="subtitle">Немного информации:</div>
                     <p>Население:163 919.</p>
                     <p>Средняя стоимость отелей: от 1000 до 4000руб.</p>
                     <p>Среднегодовая температура воздуха — 1,9 °C.</p>
