--- a/pages/num22/index.html
+++ b/pages/num22/index.html
@@ -53,7 +53,7 @@
         </div>
             <div class="statsandsymbols">
                 <div class="stats" style="width: 300px;">
-                    <div class="subtitle">НЕмного информации:</div>
+                    <div class="subtitle">Немного информации:</div>
                     <p>Население: 200 629.</p>
                     <p>Средняя стоимость отелей: от 1600 руб до 3100 руб.</p>
                     <p>Среднегодовая температура воздуха: 3,2°C.</p>
