--- a/pages/num3/index.html
+++ b/pages/num3/index.html
@@ -53,7 +53,7 @@
         </div>
             <div class="statsandsymbols">
                 <div class="stats" style="width: 300px;">
-                    <div class="subtitle">НЕмного информации:</div>
+                    <div class="subtitle">Немного информации:</div>
                     <p>Население:380 632.</p>
                     <p>Средняя стоимость отелей: от 2500 руб до 6000 руб.</p>
                     <p>Среднегодовая температура воздуха: -1,7°C.</p>
