--- a/pages/num21/index.html
+++ b/pages/num21/index.html
@@ -53,7 +53,7 @@
             </div>
             <div class="statsandsymbols">
                 <div class="stats" style="width: 300px;">
-                    <div class="subtitle">НЕмного информации:</div>
+                    <div class="subtitle">Немного информации:</div>
                     <p>Население:223 921.</p>
                     <p>Средняя стоимость отелей: от 1700 руб до 2000 руб.</p>
                     <p>Среднегодовая температура воздуха: 6,5 °C.</p>
