--- a/pages/num4/index.html
+++ b/pages/num4/index.html
@@ -50,7 +50,7 @@
             </div>
             <div class="statsandsymbols">
                 <div class="stats" style="width: 300px;">
-                    <div class="subtitle">НЕмного информации:</div>
+                    <div class="subtitle">Немного информации:</div>
                     <p>Население:128 779.</p>
                     <p>Средняя стоимость отелей: от 2000 до 5000руб.</p>
                     <p>Среднегодовая температура воздуха — 6,5 °C</p>
