--- a/pages/num20/index.html
+++ b/pages/num20/index.html
@@ -54,7 +54,7 @@
         </div>
             <div class="statsandsymbols">
                 <div class="stats" style="width: 300px;">
-                    <div class="subtitle">НЕмного информации:</div>
+                    <div class="subtitle">Немного информации:</div>
                     <p>Население:*.</p>
                     <p>Средняя стоимость отелей: от 1200 руб до 4000 руб.</p>
                     <p>Среднегодовая температура воздуха: −3°C.</p>
