--- a/pages/num5/index.html
+++ b/pages/num5/index.html
@@ -53,7 +53,7 @@
         </div>
             <div class="statsandsymbols">
                 <div class="stats" style="width: 300px;">
-                    <div class="subtitle">НЕмного информации:</div>
+                    <div class="subtitle">Немного информации:</div>
                     <p>Население: 120 778.</p>
                     <p>Средняя стоимость отелей: от 2200 до 2600.</p>
                     <p>Среднегодовая температура воздуха: 1,9 °C.</p>
