--- a/pages/num6/index.html
+++ b/pages/num6/index.html
@@ -53,7 +53,7 @@
         </div>
             <div class="statsandsymbols">
                 <div class="stats" style="width: 300px;">
-                    <div class="subtitle">НЕмного информации:</div>
+                    <div class="subtitle">Немного информации:</div>
                     <p>Население: 227 049.</p>
                     <p>Средняя стоимость отелей: от 800 руб до 3500 руб **.</p>
                     <p>Среднегодовая температура воздуха: 7,3 °C.</p>
