--- a/pages/num19/index.html
+++ b/pages/num19/index.html
@@ -53,7 +53,7 @@
         </div>
             <div class="statsandsymbols">
                 <div class="stats" style="width: 300px;">
-                    <div class="subtitle">НЕмного информации:</div>
+                    <div class="subtitle">Немного информации:</div>
                     <p>Население: 314 834.</p>
                     <p>Средняя стоимость отелей: от 1800 руб до 5400 руб.</p>
                     <p>Среднегодовая температура воздуха: 3,3°C.</p>
