--- a/pages/num7/index.html
+++ b/pages/num7/index.html
@@ -54,7 +54,7 @@
             </div>
             <div class="statsandsymbols">
                 <div class="stats" style="width: 300px;">
-                    <div class="subtitle">НЕмного информации:</div>
+                    <div class="subtitle">Немного информации:</div>
                     <p>Население:167 160.</p>
                     <p>Средняя стоимость отелей: от 500 до 3000руб.</p>
                     <p>Cреднегодовая температура воздуха — 5,4 °C</p>
