--- a/pages/num18/index.html
+++ b/pages/num18/index.html
@@ -53,7 +53,7 @@
         </div>
             <div class="statsandsymbols">
                 <div class="stats" style="width: 300px;">
-                    <div class="subtitle">НЕмного информации:</div>
+                    <div class="subtitle">Немного информации:</div>
                     <p>Население: 181 830.</p>
                     <p>Средняя стоимость отелей: от 2000 руб до 5800 руб.</p>
                     <p>Среднегодовая температура воздуха: 1,5°C.</p>
